# example-bazel-docker-go

./: BUILD.bazel  Makefile  WORKSPACE
app/cmd/: BUILD.bazel  main.go
app/constant/: BUILD.bazel  constant.go
app/internal/: BUILD.bazel  handler.go
app/other/: BUILD.bazel  util.go  util_test.go
app/util/: BUILD.bazel  util.go
